objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Email_Template__c</fullName>
        <description>This field is requried for Project Configuration on TC Platform</description>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This field represents the date on which the Project Job shall end</description>
        <inlineHelpText>This project shall end on this date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_Task__c</fullName>
        <label>Estimated Time: Task (In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Express__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Express?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ext_Template_Folder__c</fullName>
        <description>This field will be used to store the location/path of a Sharepoint folder for customer/account specific email templates.</description>
        <inlineHelpText>Location/path of a Sharepoint folder for customer/account specific email templates.</inlineHelpText>
        <label>Ext Template Folder (Sharepoint)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Contact_Email_Address__c</fullName>
        <formula>External_Contact__r.Email</formula>
        <label>External Contact Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Contact_Other_Email_Address__c</fullName>
        <label>External Contact (Others) Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Contact_Others__c</fullName>
        <description>This field is meant for entering the External Contact if it does not exist on the system</description>
        <inlineHelpText>If the external contact exists on Salesforce, then select the contact from External Contact field above otherwise enter the Contact name in this field as it is mandatory to enter the External Contact.</inlineHelpText>
        <label>External Contact (Others)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is meant for looking up a contact that belongs to the selected Account.</description>
        <inlineHelpText>Select an existing Salesforce Contact that belongs to the selected Account. If the contact does not exist on Salesforce, then enter the Contact name in the External Contact (Others) field below as it is mandatory to enter the External Contact.</inlineHelpText>
        <label>External Contact</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The External Contact must belong to the Selected Account</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs (External Contact)</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Revenue_Recognition__c</fullName>
        <label>Finance Revenue Recognition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_BS_Date_Field_Four__c</fullName>
        <label>Generic Bureau Date Field Four</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Date_Field_One__c</fullName>
        <label>Generic Bureau Date Field One</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Date_Field_Three__c</fullName>
        <label>Generic Bureau Date Field Three</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Date_Field_Two__c</fullName>
        <label>Generic Bureau Date Field Two</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Field_Five__c</fullName>
        <label>Generic Bureau Field Five</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Field_Four__c</fullName>
        <label>Generic Bureau Field Four</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Field_One__c</fullName>
        <label>Generic Bureau Field One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Field_Three__c</fullName>
        <label>Generic Bureau Field Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Field_Two__c</fullName>
        <label>Generic Bureau Field Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Numeric_Field_Four__c</fullName>
        <label>Generic Bureau Numeric Field Four</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Numeric_Field_One__c</fullName>
        <label>Generic Bureau Numeric Field One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Numeric_Field_Three__c</fullName>
        <label>Generic Bureau Numeric Field Three</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_BS_Numeric_Field_Two__c</fullName>
        <label>Generic Bureau Numeric Field Two</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Date_Field_MS_Four__c</fullName>
        <label>Generic Date Field MS Four</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_Date_Field_MS_One__c</fullName>
        <label>GDPR Data Deletion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_Date_Field_MS_Three__c</fullName>
        <label>Generic Date Field MS Three</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_Date_Field_MS_Two__c</fullName>
        <label>Generic Date Field MS Two</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_Date_Pipeline_Field_One__c</fullName>
        <label>Generic Date Pipeline Field One</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_Date_Pipeline_Field_Three__c</fullName>
        <label>Generic Date Pipeline Field Three</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_Date_Pipeline_Field_Two__c</fullName>
        <label>Generic Date Pipeline Field Two</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generic_Field_MS_Five__c</fullName>
        <label>Generic Field MS Five</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Field_MS_Four__c</fullName>
        <label>Generic Field MS Four</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Field_MS_One__c</fullName>
        <label>Generic Field MS One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Field_MS_Three__c</fullName>
        <label>Generic Field MS Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Field_MS_Two__c</fullName>
        <label>Generic Field MS Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Field_Pipeline_One__c</fullName>
        <label>Generic Field Pipeline One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Field_Pipeline_Three__c</fullName>
        <label>Generic Field Pipeline Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Field_Pipeline_Two__c</fullName>
        <label>Generic Field Pipeline Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Numerical_MS_Field_Four__c</fullName>
        <label>Generic Numerical MS Field Four</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Numerical_MS_Field_One__c</fullName>
        <label>Generic Numerical MS Field One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Numerical_MS_Field_Three__c</fullName>
        <label>Generic Numerical MS Field Three</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Numerical_MS_Field_Two__c</fullName>
        <label>Generic Numerical MS Field Two</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Numerical_Pipeline_Field_One__c</fullName>
        <label>Generic Numerical Pipeline Field One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Numerical_Pipeline_Field_Three__c</fullName>
        <label>Generic Numerical Pipeline Field Three</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Numerical_Pipeline_Field_Two__c</fullName>
        <label>Generic Numerical Pipeline Field Two</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasNamedCandidates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasNamedCandidates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Important_Information__c</fullName>
        <label>Important Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instruments_Ordered__c</fullName>
        <description>Testing Instruments ordered for the Bureau job</description>
        <label>Instruments Ordered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSAT</fullName>
                </value>
                <value>
                    <fullName>CSBOLA</fullName>
                </value>
                <value>
                    <fullName>CSBOLAE</fullName>
                </value>
                <value>
                    <fullName>CSBOLAIMC</fullName>
                </value>
                <value>
                    <fullName>CSBOLAPMC</fullName>
                </value>
                <value>
                    <fullName>CSBOLAS</fullName>
                </value>
                <value>
                    <fullName>CSBOLASO</fullName>
                </value>
                <value>
                    <fullName>CSBOLAT</fullName>
                </value>
                <value>
                    <fullName>CSBOLAWSQ</fullName>
                </value>
                <value>
                    <fullName>CSBOLC32</fullName>
                </value>
                <value>
                    <fullName>CSBOLC32+</fullName>
                </value>
                <value>
                    <fullName>CSBOLCCALL</fullName>
                </value>
                <value>
                    <fullName>CSBOLCCEO</fullName>
                </value>
                <value>
                    <fullName>CSBOLCCIG</fullName>
                </value>
                <value>
                    <fullName>CSBOLCCP</fullName>
                </value>
                <value>
                    <fullName>CSBOLCCPER</fullName>
                </value>
                <value>
                    <fullName>CSBOLDAP32</fullName>
                </value>
                <value>
                    <fullName>CSBOLEI</fullName>
                </value>
                <value>
                    <fullName>CSBOLER</fullName>
                </value>
                <value>
                    <fullName>CSBOLIMC</fullName>
                </value>
                <value>
                    <fullName>CSBOLIMCP</fullName>
                </value>
                <value>
                    <fullName>CSBOLIMCP+</fullName>
                </value>
                <value>
                    <fullName>CSBOLL32</fullName>
                </value>
                <value>
                    <fullName>CSBOLM32</fullName>
                </value>
                <value>
                    <fullName>CSBOLM32+</fullName>
                </value>
                <value>
                    <fullName>CSBOLMMC32</fullName>
                </value>
                <value>
                    <fullName>CSBOLMP32</fullName>
                </value>
                <value>
                    <fullName>CSBOLMPMQ</fullName>
                </value>
                <value>
                    <fullName>CSBOLMT32</fullName>
                </value>
                <value>
                    <fullName>CSBOLMYL32</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is meant for looking a Salesforce User who is the internal contact for this project.</description>
        <inlineHelpText>Select the Salesforce User who shall be the Internal Contact for this project.</inlineHelpText>
        <label>Internal Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Contact_Formula__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + &apos; &apos; +Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Owner from the linked opportunity is the Internal Contact for this project.</inlineHelpText>
        <label>Internal Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Contact__c</fullName>
        <description>Internal SHL person requesting the job, not an external SHL client.</description>
        <label>Internal Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Department_Code__c</fullName>
        <description>For bureau jobs</description>
        <label>Internal Department Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceMonthly__c</fullName>
        <formula>IF( Account__r.InvoiceMonthly__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Monthly?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Query_Reason__c</fullName>
        <inlineHelpText>Enter details if the credit status is Queried</inlineHelpText>
        <label>Invoice Query Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be invoiced</fullName>
                </value>
                <value>
                    <fullName>Ready for units to be deducted</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Waiting for consultant</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Waiting for pre-payment</fullName>
                </value>
                <value>
                    <fullName>Free of charge</fullName>
                </value>
                <value>
                    <fullName>Bureau - waiting for information</fullName>
                </value>
                <value>
                    <fullName>SOE - Queried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice - Normal</fullName>
                </value>
                <value>
                    <fullName>Invoice - PO number</fullName>
                </value>
                <value>
                    <fullName>Invoice - Credit Card</fullName>
                </value>
                <value>
                    <fullName>Invoice - Special pricing: see notes</fullName>
                </value>
                <value>
                    <fullName>Invoice - Project Team</fullName>
                </value>
                <value>
                    <fullName>Invoice - Part of Consultancy invoice</fullName>
                </value>
                <value>
                    <fullName>Invoice - Monthly: 25th</fullName>
                </value>
                <value>
                    <fullName>Invoice - Weekly</fullName>
                </value>
                <value>
                    <fullName>Free - Consultancy/KAM</fullName>
                </value>
                <value>
                    <fullName>Free - Follow up day</fullName>
                </value>
                <value>
                    <fullName>Free - Trial</fullName>
                </value>
                <value>
                    <fullName>Free - Error made</fullName>
                </value>
                <value>
                    <fullName>Free - Americas P&amp;P</fullName>
                </value>
                <value>
                    <fullName>Free - Voucher/Campaign</fullName>
                </value>
                <value>
                    <fullName>Free - Waiting for own system</fullName>
                </value>
                <value>
                    <fullName>Free - included in Paper &amp; Pencil costs</fullName>
                </value>
                <value>
                    <fullName>Cross charging - Internal</fullName>
                </value>
                <value>
                    <fullName>Cross charging - SPS</fullName>
                </value>
                <value>
                    <fullName>Pre-payment - Bank transfer</fullName>
                </value>
                <value>
                    <fullName>Pre-payment - Licence</fullName>
                </value>
                <value>
                    <fullName>Unit deduction - once</fullName>
                </value>
                <value>
                    <fullName>Unit deduction - double</fullName>
                </value>
                <value>
                    <fullName>Career Guidance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_notes_Special_notes__c</fullName>
        <description>To add notes relating to the transfer of job after the split from P&amp;T to SPS</description>
        <label>Invoice Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoicedContactRegNo__c</fullName>
        <formula>Contact__r.Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoiced Contact (Reg. No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced_Contact_Phoenix_Indicator__c</fullName>
        <description>This field displays the Trained User Phoenix Status in the form of an image.</description>
        <formula>Contact__r.Phoenix_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an indicator of the Invoice Contact Status as per the Phoenix Business Rules.</inlineHelpText>
        <label>Training Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced_Contact_Phoenix_Message__c</fullName>
        <description>This field shows the final message generated by the Phoenix Business Rules as per the following criteria: 
If the Red Message is not blank, it shows the Red Message else it checks the Amber Message. 
If the Amber Message is not blank, it shows the Amber Message else it shows the Green Message.</description>
        <formula>Contact__r.Phoenix_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Status Message generated by the Phoenix Business Rules</inlineHelpText>
        <label>Training Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Irish_Account__c</fullName>
        <description>Added to ensure Irish billing is accurate.  May consider adding validation rule as in Accounts pages.</description>
        <label>Irish Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Auto_Pipeline_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auto Pipeline Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GCSC_Opp__c</fullName>
        <formula>if(text(Opportunity__r.Actual_Record_Type_Name__c)==&apos;GCSC Opportunity&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is GCSC Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Logged_User_PM__c</fullName>
        <description>Project Manager</description>
        <formula>IF(Project_Manager__r.Username  =  $User.Username, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Logged User PM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Opportunity_Stage_Closed_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is checked when Opportunity Stage moved to Closed/Won.This field is not added on page layout and used only in a workflow rule</description>
        <label>Is Opportunity Stage Closed/Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Redirect_To_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to redirect user to Task tab when user create a new Job for the first time.</description>
        <label>Is Redirect To Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobOnHoldCaseReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job on Hold Case Reference</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>JobOnHoldCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JobOnHoldDuration__c</fullName>
        <label>Job On Hold Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobOutsideSLA__c</fullName>
        <formula>if(ISNULL(ProcessedOn__c), 
if( 
(NOW() -SubmittedOn__c- 
CASE(MOD( DATEVALUE(SubmittedOn__c) - DATE(1900,1,7) ,7), 
0 , CASE( MOD( DATEVALUE(NOW()) - DATEVALUE(SubmittedOn__c) ,7),1,1,2,1,3,1,4,1,5,1,6,2,2), 
1 , CASE( MOD( DATEVALUE(NOW()) - DATEVALUE(SubmittedOn__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,2), 
2 , CASE( MOD( DATEVALUE(NOW()) - DATEVALUE(SubmittedOn__c), 7),1,0,2,0,3,0,4,0,5,2,6,2,2), 
3 , CASE( MOD( DATEVALUE(NOW()) - DATEVALUE(SubmittedOn__c), 7),1,0,2,0,3,0,4,2,5,2,6,2,2), 
4 , CASE( MOD( DATEVALUE(NOW()) - DATEVALUE(SubmittedOn__c), 7),1,0,2,0,3,2,4,2,5,2,6,2,2), 
5 , CASE( MOD( DATEVALUE(NOW()) - DATEVALUE(SubmittedOn__c) ,7),1,0,2,2,3,2,4,2,5,2,6,2,2), 
6 , CASE( MOD( DATEVALUE(NOW()) - DATEVALUE(SubmittedOn__c) ,7),1,2,2,2,3,2,4,2,5,2,6,2,2), 
999) 
) 
&gt;1,&apos;Yes&apos;,&apos;No&apos;), 
if( 
(ProcessedOn__c - SubmittedOn__c- 
CASE(MOD( DATEVALUE(SubmittedOn__c) - DATE(1900,1,7) ,7), 
0 , CASE( MOD( DATEVALUE(ProcessedOn__c) - DATEVALUE(SubmittedOn__c) ,7),1,1,2,1,3,1,4,1,5,1,6,2,2), 
1 , CASE( MOD( DATEVALUE(ProcessedOn__c) - DATEVALUE(SubmittedOn__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,2), 
2 , CASE( MOD( DATEVALUE(ProcessedOn__c) - DATEVALUE(SubmittedOn__c), 7),1,0,2,0,3,0,4,0,5,2,6,2,2), 
3 , CASE( MOD( DATEVALUE(ProcessedOn__c) - DATEVALUE(SubmittedOn__c), 7),1,0,2,0,3,0,4,2,5,2,6,2,2), 
4 , CASE( MOD( DATEVALUE(ProcessedOn__c) - DATEVALUE(SubmittedOn__c), 7),1,0,2,0,3,2,4,2,5,2,6,2,2), 
5 , CASE( MOD( DATEVALUE(ProcessedOn__c) - DATEVALUE(SubmittedOn__c) ,7),1,0,2,2,3,2,4,2,5,2,6,2,2), 
6 , CASE( MOD( DATEVALUE(ProcessedOn__c) - DATEVALUE(SubmittedOn__c) ,7),1,2,2,2,3,2,4,2,5,2,6,2,2), 
999) 
) 
&gt;1,&apos;Yes&apos;,&apos;No&apos;) 
)</formula>
        <label>Job Outside SLA?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobStatus__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UnConfirmed</fullName>
                    <default>true</default>
                    <label>Unconfirmed</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Scoping</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Pre Launch</fullName>
                </value>
                <value>
                    <fullName>Launch</fullName>
                </value>
                <value>
                    <fullName>Post Launch</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Despatch_Details__c</fullName>
        <description>Detail of despatch info for Bureau job</description>
        <label>Job Despatch Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Notes__c</fullName>
        <description>Notes for Job</description>
        <label>Job Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Region__c</fullName>
        <label>Job Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Non China</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Reopened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Reopened?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agri Commodity Procurement Manager</fullName>
                </value>
                <value>
                    <fullName>Agri Commodity Quality Assayer</fullName>
                </value>
                <value>
                    <fullName>Agriculture Extension Service Provider</fullName>
                </value>
                <value>
                    <fullName>Agriculture Extension Service Provider_STT_Version 2.0</fullName>
                </value>
                <value>
                    <fullName>Agriculture Extension Service Provider_Trainer</fullName>
                </value>
                <value>
                    <fullName>Agriculture Machinery Operator</fullName>
                </value>
                <value>
                    <fullName>Agriculture Machinery Operator_Trainer</fullName>
                </value>
                <value>
                    <fullName>Agriculture Machinery Repair and Maintenance Service Provider_RPL_Version 2.0</fullName>
                </value>
                <value>
                    <fullName>Agriculture Machinery Repair and Maintenance Service Provider_SIP</fullName>
                </value>
                <value>
                    <fullName>Agriculture Machinery Repair and Maintenance Service Provider_Trainer</fullName>
                </value>
                <value>
                    <fullName>Agri Service Input Dealer_SIP</fullName>
                </value>
                <value>
                    <fullName>Agri Service Input Dealer_Trainer</fullName>
                </value>
                <value>
                    <fullName>Agri Warehouse Supervisor</fullName>
                </value>
                <value>
                    <fullName>AI Foundation</fullName>
                </value>
                <value>
                    <fullName>Airline Baggage Handler</fullName>
                </value>
                <value>
                    <fullName>Airline Baggage Handler_SIP</fullName>
                </value>
                <value>
                    <fullName>Airline Cabin Crew</fullName>
                </value>
                <value>
                    <fullName>Airline Cabin Crew_SIP</fullName>
                </value>
                <value>
                    <fullName>Airline Cargo Assistant</fullName>
                </value>
                <value>
                    <fullName>Airline Cargo Assistant_SIP</fullName>
                </value>
                <value>
                    <fullName>Airline Customer Service Executive</fullName>
                </value>
                <value>
                    <fullName>Airline Flight Load Controller_SIP</fullName>
                </value>
                <value>
                    <fullName>Airline Security Executive</fullName>
                </value>
                <value>
                    <fullName>Airline Security Executive_SIP</fullName>
                </value>
                <value>
                    <fullName>Airlines Reservation Agent</fullName>
                </value>
                <value>
                    <fullName>Airport Safety Crew</fullName>
                </value>
                <value>
                    <fullName>Analyst End Point Security</fullName>
                </value>
                <value>
                    <fullName>Animal Health Worker</fullName>
                </value>
                <value>
                    <fullName>Animal Health Worker_Version 1.0_SIP</fullName>
                </value>
                <value>
                    <fullName>Aquaculture Worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify if the job is complete or not.</description>
        <label>Job Status Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Transfer_Status__c</fullName>
        <defaultValue>&quot;Not Sent to FTP&quot;</defaultValue>
        <description>This field is created to store the Transfer status of Job, transfer is realted to FTP.</description>
        <label>Job Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent to FTP</fullName>
                    <label>Not Transferred to FTP</label>
                </value>
                <value>
                    <fullName>Ready to transfer</fullName>
                    <label>Ready to Transfer</label>
                </value>
                <value>
                    <fullName>Sent to FTP</fullName>
                    <label>Transferred to FTP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>